# EAE_Firmware

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: ci.yml
include/: can_bus.h  cli.h  fsm.h  pid.h  plant.h
src/: can_bus.c  cli.c  fsm.c  main.c  pid.c  plant.c
tests/: test_can.cpp  test_pid.cpp
